Pester to do.oo3: Updated status.

--- a/Pester to do.html/index.html
+++ b/Pester to do.html/index.html
@@ -4086,12 +4086,12 @@
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
 <td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
-<img onmousedown="ioSwitch('pcdQ-cexKFk3', event.shiftKey)" id="icdQ-cexKFk3" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" border="0" alt="V" src="Expanded.png" title="collapse"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="-" src="Mixed.png">
+<img onmousedown="ioSwitch('pcdQ-cexKFk3', event.shiftKey)" id="icdQ-cexKFk3" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" border="0" alt="&gt;" src="Collapsed.png" title="expand"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="X" src="Checked.png">
 </td>
 <td class=" content level2 subcell">QuickTime → AVFoundation for videos<br>
 </td>
 </tr></table></div></td></tr></table>
-<div id="pcdQ-cexKFk3" class="expanded">
+<div id="pcdQ-cexKFk3" class="collapsed">
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level3 levelguttercolor3" style="width: 41px;"></td>
 <td class=" subcell wholedocgutter indicator level3 levelguttercolor3" style="width: 28px;">
@@ -4195,6 +4195,32 @@
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level3 levelguttercolor3" style="width: 41px;"></td>
 <td class=" subcell wholedocgutter indicator level3 levelguttercolor3" style="width: 28px;">
+<img onmousedown="ioSwitch('pfBzQIOZSu5i', event.shiftKey)" id="ifBzQIOZSu5i" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" border="0" alt="&gt;" src="Collapsed.png" title="expand"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="X" src="Checked.png">
+</td>
+<td class=" content level3 subcell">Do some more testing with [NJRQTMediaPopUpButton setOutputVolume:withPreview:]<br>
+</td>
+</tr></table></div></td></tr></table>
+<div id="pfBzQIOZSu5i" class="collapsed">
+<table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor4"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
+<td class=" subcell wholedocgutter level4 levelguttercolor4" style="width: 57px;"></td>
+<td class=" subcell wholedocgutter indicator level4 levelguttercolor4" style="width: 28px;">
+<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="X" src="Checked.png">
+</td>
+<td class=" content level4 subcell">It's going to go away, but if it's fixed in 10.9/10/11, reenable it<br>
+</td>
+</tr></table></div></td></tr></table>
+<table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor4"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
+<td class=" subcell wholedocgutter level4 levelguttercolor4" style="width: 57px;"></td>
+<td class=" subcell wholedocgutter indicator level4 levelguttercolor4" style="width: 28px;">
+<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="X" src="Checked.png">
+</td>
+<td class=" content level4 subcell">Seems fixed with move to AVFoundation.<br>
+</td>
+</tr></table></div></td></tr></table>
+</div>
+<table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
+<td class=" subcell wholedocgutter level3 levelguttercolor3" style="width: 41px;"></td>
+<td class=" subcell wholedocgutter indicator level3 levelguttercolor3" style="width: 28px;">
 <img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="X" src="Checked.png">
 </td>
 <td class=" content level3 subcell">Wow, this was *already* broken. As long as a movie had a soundtrack, we could create a PSSoundAlert with it. Whoops.<br>
@@ -4216,49 +4242,57 @@
 <td class=" content level3 subcell">Filter with AVURLAsset.audiovisualTypes, or you get lots of logging on 10.10<br>
 </td>
 </tr></table></div></td></tr></table>
-<table cellspacing="0" border="0" cellpadding="0" class="row heighthack">
-<tr><td class=" col1 colbackground1 col_width1" style="border-bottom: none;"><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
-<td class=" subcell wholedocgutter level3 levelguttercolor3" style="width: 41px;"></td>
-<td class=" subcell wholedocgutter indicator level3 levelguttercolor3" style="width: 28px;">
-<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
-</td>
-<td class=" content level3 subcell">Errors when closing the movie controller window on 10.10<br>
-</td>
-</tr></table></div></td></tr>
-<tr><td class=" level3 colbackground1"><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="width:100%"><tr>
-<td style="width: 41px;" class=" subcell wholedocgutter levelguttercolor3"></td>
-<td class=" subcell wholedocgutter levelguttercolor3" style="width: 28px;"></td>
-<td class=" subcell" style="width: 16px;"></td>
-<td class="note subcell"><div style="text-align: left;  ">
-<span class="" style='color:rgb(0,0,0) ;  font-family: "Menlo", sans-serif;  font-style: italic;font-style: normal;font-weight: 900;  text-align: left;  '>[10:00:07.596] itemasync_CopyProperty signalled err=-12785 (kFigBaseObjectError_Invalidated) (invalidated) at /SourceCache/CoreMedia/CoreMedia-1562.240/Prototypes/Player/FigPlayer_Async.c line 2088</span><br>
-</div></td>
-</tr></table></div></td></tr>
-</table>
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level3 levelguttercolor3" style="width: 41px;"></td>
 <td class=" subcell wholedocgutter indicator level3 levelguttercolor3" style="width: 28px;">
-<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
+<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="X" src="Checked.png">
 </td>
-<td class=" content level3 subcell">Shouldn't be able to drag onto disabled button<br>
+<td class=" content level3 subcell">Lots of logging when closing the movie controller window on 10.10<br>
 </td>
 </tr></table></div></td></tr></table>
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level3 levelguttercolor3" style="width: 41px;"></td>
 <td class=" subcell wholedocgutter indicator level3 levelguttercolor3" style="width: 28px;">
-<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
+<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="X" src="Checked.png">
 </td>
-<td class=" content level3 subcell">When we remove an item from the menu because it isn't valid any more, we don't update the list of aliases properly<br>
+<td class=" content level3 subcell">Shouldn't be able to drag onto disabled NJRMediaPopUpButton<br>
 </td>
 </tr></table></div></td></tr></table>
 </div>
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
 <td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
-<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
+<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="X" src="Checked.png">
 </td>
-<td class=" content level2 subcell">Test removing no-longer-supported media from alerts — it seems to hang sometimes (wrong thread) and needs a better message which suggests you contact me if needed<br>
+<td class=" content level2 subcell">Fix up Read Me<br>
 </td>
 </tr></table></div></td></tr></table>
+<table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
+<td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
+<td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
+<img onmousedown="ioSwitch('pkhfBnNLkMiG', event.shiftKey)" id="ikhfBnNLkMiG" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" border="0" alt="V" src="Expanded.png" title="collapse"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
+</td>
+<td class=" content level2 subcell">Better handle no-longer-supported image types<br>
+</td>
+</tr></table></div></td></tr></table>
+<div id="pkhfBnNLkMiG" class="expanded">
+<table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
+<td class=" subcell wholedocgutter level3 levelguttercolor3" style="width: 41px;"></td>
+<td class=" subcell wholedocgutter indicator level3 levelguttercolor3" style="width: 28px;">
+<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
+</td>
+<td class=" content level3 subcell">When we select and remove an item from the menu because it isn't valid any more, we don't update the list of aliases properly and fail to validate<br>
+</td>
+</tr></table></div></td></tr></table>
+<table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
+<td class=" subcell wholedocgutter level3 levelguttercolor3" style="width: 41px;"></td>
+<td class=" subcell wholedocgutter indicator level3 levelguttercolor3" style="width: 28px;">
+<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
+</td>
+<td class=" content level3 subcell">When it's in an alert being restored on startup, it seems to hang sometimes (wrong thread) and needs a better message which suggests you contact me if needed<br>
+</td>
+</tr></table></div></td></tr></table>
+</div>
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
 <td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
@@ -4272,15 +4306,7 @@
 <td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
 <img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
 </td>
-<td class=" content level2 subcell">Fix up Read Me<br>
-</td>
-</tr></table></div></td></tr></table>
-<table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
-<td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
-<td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
-<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
-</td>
-<td class=" content level2 subcell">Test on 10.9<br>
+<td class=" content level2 subcell">Test on 10.9 (and desupport if it's buggy)<br>
 </td>
 </tr></table></div></td></tr></table>
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
@@ -4311,12 +4337,12 @@
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor1"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level1 levelguttercolor1" style="width: 9px;"></td>
 <td class=" subcell wholedocgutter indicator level1 levelguttercolor1" style="width: 28px;">
-<img onmousedown="ioSwitch('pgotAfbOXCFU', event.shiftKey)" id="igotAfbOXCFU" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" border="0" alt="&gt;" src="Collapsed.png" title="expand"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="-" src="Mixed.png">
+<img onmousedown="ioSwitch('pgotAfbOXCFU', event.shiftKey)" id="igotAfbOXCFU" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" border="0" alt="V" src="Expanded.png" title="collapse"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="-" src="Mixed.png">
 </td>
 <td class=" content level1 subcell">1.1 final<br>
 </td>
 </tr></table></div></td></tr></table>
-<div id="pgotAfbOXCFU" class="collapsed">
+<div id="pgotAfbOXCFU" class="expanded">
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
 <td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
@@ -4710,22 +4736,6 @@
 <td class=" content level2 subcell">Incorporate SFBCrashReporter (now it's 10.8+ and trivial to do)<br>
 </td>
 </tr></table></div></td></tr></table>
-<table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
-<td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
-<td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
-<img onmousedown="ioSwitch('pfBzQIOZSu5i', event.shiftKey)" id="ifBzQIOZSu5i" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" border="0" alt="V" src="Expanded.png" title="collapse"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
-</td>
-<td class=" content level2 subcell">Do some more testing with [NJRQTMediaPopUpButton setOutputVolume:withPreview:]<br>
-</td>
-</tr></table></div></td></tr></table>
-<div id="pfBzQIOZSu5i" class="expanded"><table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
-<td class=" subcell wholedocgutter level3 levelguttercolor3" style="width: 41px;"></td>
-<td class=" subcell wholedocgutter indicator level3 levelguttercolor3" style="width: 28px;">
-<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
-</td>
-<td class=" content level3 subcell">It's going to go away, but if it's fixed in 10.9/10/11, reenable it<br>
-</td>
-</tr></table></div></td></tr></table></div>
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
 <td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
