Pester to do.oo3: Updated status.

--- a/Pester to do.html/index.html
+++ b/Pester to do.html/index.html
@@ -175,8 +175,8 @@
 			color:rgb(84,84,84) ;  font-style: italic;font-size: 11px;font-style: italic;font-size: 11px;
 			}
 			
-			/* Total table width is 530
-			Adjusted table width is 561 */
+			/* Total table width is 645
+			Adjusted table width is 683 */
 			
 			.wholething {
 				width: auto;
@@ -185,14 +185,14 @@
 			
 			table.row {
 				
-						width: 530px;
+						width: 645px;
 						
 			
 			}
 			
 			
     .col_width1 { 
-        width: 530px;  /* Actual width is 530 */
+        width: 645px;  /* Actual width is 645 */
     }
 
     .col1 { 
@@ -4286,12 +4286,12 @@
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
 <td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
-<img onmousedown="ioSwitch('pkhfBnNLkMiG', event.shiftKey)" id="ikhfBnNLkMiG" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" border="0" alt="V" src="Expanded.png" title="collapse"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="-" src="Mixed.png">
+<img onmousedown="ioSwitch('pkhfBnNLkMiG', event.shiftKey)" id="ikhfBnNLkMiG" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" border="0" alt="&gt;" src="Collapsed.png" title="expand"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="X" src="Checked.png">
 </td>
 <td class=" content level2 subcell">Better handle no-longer-supported image types<br>
 </td>
 </tr></table></div></td></tr></table>
-<div id="pkhfBnNLkMiG" class="expanded">
+<div id="pkhfBnNLkMiG" class="collapsed">
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level3 levelguttercolor3" style="width: 41px;"></td>
 <td class=" subcell wholedocgutter indicator level3 levelguttercolor3" style="width: 28px;">
@@ -4311,7 +4311,7 @@
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level3 levelguttercolor3" style="width: 41px;"></td>
 <td class=" subcell wholedocgutter indicator level3 levelguttercolor3" style="width: 28px;">
-<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
+<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="X" src="Checked.png">
 </td>
 <td class=" content level3 subcell">When we select and remove an item from the menu because it isn't valid any more, we don't update the list of aliases properly and fail to validate<br>
 </td>
