Update release notes.

--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -46,6 +46,8 @@
         output device, rather than the alert device selected in
         Preferences.
         </li>
+        <li>Fix multiple issues related to tracking and validating
+        recent media.</li>
         <li>Fix an issue introduced in 1.1b20 in which movie alerts
         would play their audio only, not their video.</li>
         <li>Fix an issue in which the All Alarms window could be
